# firmadigitale-client

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: config.cmake  packaging.cmake  patch.xml  windows-registry-entries.wxs
icons/macos/: icon.icns
old/: .project  AUTHORS
old/dsodoo/: README_INSTALLAZIONE.txt
old/dsodoo/backend/dsodoo/: cairo._cairo.pyd  config.ini
old/dsodoo/backend/dsodoo/etc/gtk-2.0/: gtk.immodules
old/dsodoo/backend/dsodoo/share/gtksourceview-2.0/language-specs/: desktop.lang
old/dsodoo/backend/dsodoo/share/gtksourceview-2.0/styles/: cobalt.xml  oblivion.xml
old/dsodoo/backend/installer/: dsodoo.reg  install_run_as_administrator.bat  opensc-0.15.0-win32.msi
old/dsodoo/interface/: about.py  build_exe.bat  config.glade  dsodoo.py  main.glade  null.py  pin.glade  psc.py  setup.py  webutils.py  ziplib.py
src/: CMakeLists.txt  action.cpp  action.hpp  config.hpp.in  fdotool.cpp  fdotool.hpp  resources.qrc  version.hpp
src/settings/: CMakeLists.txt  defaults.hpp  fdosettings.cpp  fdosettings.hpp  manager.cpp  manager.hpp  utility.cpp
src/signer/: CMakeLists.txt  digisigner.cpp  digisigner.hpp
src/utility/: CMakeLists.txt  utility.cpp  utility.hpp
src/window/: CMakeLists.txt  configdialog.cpp  configdialog.hpp  configdialog.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  processwindow.cpp  processwindow.hpp  processwindow.ui
src/worker/: CMakeLists.txt  odooworker.cpp  odooworker.hpp
tools/: CMakeLists.txt  openssl-1.0.2m-cades.patch
