cmake_minimum_required(VERSION 3.0)
project(firmadigitale-client)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_INCLUDE_CURRENT_DIR ON)

set_property(GLOBAL PROPERTY USE_FOLDERS ON)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(QT5_PREFIX "$ENV{QTDIR}" CACHE PATH "Qt5 prefix path")

set(CMAKE_PREFIX_PATH "${QT5_PREFIX}/lib/cmake")

enable_testing()

add_subdirectory(src)

set(CPACK_PACKAGE_NAME "fdotool")
set(CPACK_PACKAGE_VENDOR "Seedoo")

set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "0")
set(CPACK_PACKAGE_VERSION_PATCH "0")

set(CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
set(CPACK_PACKAGE_CONTACT "sadylan@gmail.com")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Tool per l'integrazione della Firma Digitale su Odoo")
set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}")
#set(CPACK_PACKAGE_ICON "")

#set(CPACK_RESOURCE_FILE_LICENSE "LICENSE.txt")
#set(CPACK_RESOURCE_FILE_README "README.txt")
#set(CPACK_RESOURCE_FILE_WELCOME "WELCOME.txt")

set(CPACK_COMPONENTS_ALL fdotool)

set(CPACK_COMPONENT_FDOTOOL_DISPLAY_NAME "FDO Tool")
set(CPACK_COMPONENT_FDOTOOL_DESCRIPTION "Tool per la firma digitale Odoo")

if (UNIX AND NOT APPLE)
    set(CPACK_GENERATOR "DEB")

    #    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "i386")
    #    set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")

    set(CPACK_DEBIAN_PACKAGE_SECTION "misc")
    set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
    set(CPACK_DEBIAN_PACKAGE_SHLIBDEPS ON)
elseif (WIN32)
    set(CPACK_GENERATOR "WIX")

    set(CPACK_PACKAGE_INSTALL_DIRECTORY "FDO Tool ${CPACK_PACKAGE_VERSION}")
elseif (APPLE)
    #    set(CPACK_GENERATOR "OSXX11")
    set(CPACK_GENERATOR "Bundle")
endif ()

include(CPack)
